# pdfcompressor

./: Cargo.toml  README.md  build.rs  justfile
i18n/en/: pdfcompressor.ftl
src/: app.rs  application.rs  compress.rs  lib.rs  main.rs
src/app/: key_bind.rs
src/resources/: resources.gresource.xml  window.ui
src/window/: imp.rs  mod.rs
