[package]
name = "pdfcompressor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
gtk = { version = "0.4.7", package = "gtk4" }
rand = "0.8.5"
system-deps = "2.0"


[package.metadata.system-deps]
ghostscript = "9.56"