[package]
name = "pdfcompressor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.8.0"
cascade = "1.0.1"
clap = { version = "4.3", features = ["derive"] }
glib = "0.17.10"
gtk = { version = "0.6.6", package = "gtk4" }
system-deps = "2.0"


[package.metadata.system-deps]
ghostscript = "9.56"
